--- a/BTCropAndResizeImage/Main.storyboard
+++ b/BTCropAndResizeImage/Main.storyboard
@@ -27,9 +27,9 @@
         <!--View Controller - Handle-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="cropViewController" id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" alpha="0.20000000000000001" tag="-10" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default.png" id="ZgU-rc-4wA">
@@ -292,9 +292,12 @@
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
                                                 <connections>
-                                                    <segue destination="vXZ-lx-hvc" kind="modal" identifier="BackCrop" id="Qb9-px-Ik7"/>
+                                                    <action selector="backCropViewController:" destination="j4e-Zf-QS4" eventType="touchUpInside" id="eD0-fG-C8f"/>
                                                 </connections>
                                             </button>
+                                            <connections>
+                                                <action selector="backCropViewController:" destination="j4e-Zf-QS4" id="0sO-TT-Vc3"/>
+                                            </connections>
                                         </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" style="plain" id="UzJ-nv-v9P">
                                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="7B7-kk-9Au">
@@ -326,7 +329,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8p9-wo-VVG" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-759" y="-1336"/>
+            <point key="canvasLocation" x="-587" y="-643"/>
         </scene>
         <!--Share View Controller-->
         <scene sceneID="YQf-lA-G7s">
@@ -485,7 +488,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="Qb9-px-Ik7"/>
-        <segue reference="XEx-Aw-d76"/>
+        <segue reference="c0E-qF-aFV"/>
     </inferredMetricsTieBreakers>
 </document>
